--- a/index.html
+++ b/index.html
@@ -25,35 +25,26 @@
 
 
   <header>
-    <div class='bg-box'>
-    </div>
-    <div class='name'>
-      <h1>SEAN <br>KHOTTAVONG</h1>
-    </div>
+    <!-- <div class='bg'></div> -->
+    <h1>Sean Khottavong <br><span>Web developer</span></h1>
+    <img class='pic' src="Image 5.png" alt="">
 
-    <div class='bg-box2'>
-      <img id='pic' class='pic' src="Image 5.JPG" alt="">
-    </div>
-    <div id='title2' class='title2'>
-      <h1>DEVELOPER</h1></div>
-    <div id='title1' class='title1'>
-      <h1>WEB</h1></div>
   </header>
 
 
 
 
-  <div class='content-head'>
-    <h1 id='about'>About Me</h1></div>
-  <div class='about'>
-    <div class='aboutbox'>
-      <p>I'm an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local, moderately
-        well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I'm a natural creator and an equally skilled problem-solver.</p>
-    </div>
+
+  <div id='about' class='about'>
+    <h1>About Me</h1>
+    <p>I'm an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local, moderately well-known
+      company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I'm a natural creator and an equally skilled problem-solver.</p>
     <div class='bg-box3'></div>
   </div>
 
-  <div class='content-head'>
+
+
+  <div class='projects'>
     <h1>My Projects</h1></div>
   <div class='projects'>
     <a href="">Choose Your Own Adventure</a>
