--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   <nav>
     <a href="">Home</a>
     <a href="#about">About</a>
@@ -23,8 +24,8 @@
 
 
 
-
   <header>
+
     <!-- <div class='bg'></div> -->
     <h1>Sean Khottavong <br><span>Web developer</span></h1>
     <img class='pic' src="Image 5.png" alt="">
@@ -43,17 +44,21 @@
   </div>
 
 
-
-  <div class='projects'>
+  <div class='projectsflex'>
     <h1>My Projects</h1></div>
   <div class='projects'>
-    <a href="">Choose Your Own Adventure</a>
-    <div class='codepen'>
-      <p data-theme-id="light" data-slug-hash="gvLpXx" data-default-tab="html,result" data-user="Khottavong" data-embed-version="2" data-pen-title="gvLpXx" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/Khottavong/pen/gvLpXx/">gvLpXx</a> by Sean Khottavong (<a href="https://codepen.io/Khottavong">@Khottavong</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-      <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
-    </div>
 
+    <div class='item'>
+      <a href="">Choose Your Own Adventure</a>
+    </div>
+    <div class='item'>
+    </div>
+    <div class='item'>
+    </div>
+    <div class='item'>
+    </div>
   </div>
+
 
   <footer id='footer'>
     <h1>If you like what you see, let's get in touch.</h1>
