--- a/index.html
+++ b/index.html
@@ -45,23 +45,35 @@
 
 
   <div class='projectsflex'>
-    <h1>My Projects</h1></div>
-  <div class='projects'>
+    <h1>My Projects</h1>
+    <div class='projects'>
 
-    <div class='item'>
-      <a href="">Choose Your Own Adventure</a>
-    </div>
-    <div class='item'>
-    </div>
-    <div class='item'>
-    </div>
-    <div class='item'>
+      <div class='item'>
+        <a href="">Choose Your Own Adventure</a>
+      </div>
+      <div class='item'>
+      </div>
+      <div class='item'>
+      </div>
+      <div class='item'>
+      </div>
     </div>
   </div>
 
 
+
   <footer id='footer'>
     <h1>If you like what you see, let's get in touch.</h1>
+    <div class='content'>
+      <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
+        <input type="text" name="firstname" placeholder="First Name" size="10" autofocus required>
+        <input type="text" name="lastname" placeholder="Last Name" size="10" required>
+        <input type="email" name="userEmail" placeholder="Email" required>
+        <textarea name="user_message"></textarea>
+        <input id='contactsubmit' type="submit">
+      </form>
+
+    </div>
 
   </footer>
 
