--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <h1>My Projects</h1>
     <div class='projects'>
 
-      <div class='item'>
-        <a href="">Choose Your Own Adventure</a>
+      <div class='item one'>
+        <a href="">Choose Your <br> Own Adventure</a>
       </div>
       <div class='item'>
       </div>
@@ -64,7 +64,7 @@
 
   <footer id='footer'>
     <h1>If you like what you see, let's get in touch.</h1>
-    <div class='content'>
+    <div class='form'>
       <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
         <input type="text" name="firstname" placeholder="First Name" size="10" autofocus required>
         <input type="text" name="lastname" placeholder="Last Name" size="10" required>
@@ -72,8 +72,10 @@
         <textarea name="user_message"></textarea>
         <input id='contactsubmit' type="submit">
       </form>
-
     </div>
+
+
+
 
   </footer>
 
