--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#about">About</a>
     <a href="">Projects</a>
     <a href="#footer">Contact</a>
-    <i class='fa fa-linkedin'></i>
+    <!-- <i class='fa fa-linkedin'></i> -->
   </nav>
 
 
@@ -27,7 +27,8 @@
   <header>
 
     <!-- <div class='bg'></div> -->
-    <h1>Sean Khottavong <br><span>Web developer</span></h1>
+    <h1 class='name'>Sean <br> Khottavong</h1>
+    <h1 class='title'>Web <br><span class='dev'> developer</span></h1>
     <img class='pic' src="Image 5.png" alt="">
 
   </header>
