--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
   <div id='about' class='about'>
     <h1>About Me</h1>
-    <p>I'm an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local, moderately well-known
-      company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I'm a natural creator and an equally skilled problem-solver.</p>
+    <p>I'm an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local, well-known company,
+      but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
     <div class='bg-box3'></div>
   </div>
 
