--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- <div class='bg'></div> -->
     <h1 class='name'>Sean <br> Khottavong</h1>
-    <h1 class='title'>Web <br><span class='dev'> developer</span></h1>
+    <h1 class='title'> <br><span class='dev'>web developer</span></h1>
     <img class='pic' src="Image 5.png" alt="">
 
   </header>
