--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav>
     <a href="">Home</a>
     <a href="#about">About</a>
-    <a href="">Projects</a>
+    <a href="#projects">Projects</a>
     <a href="#footer">Contact</a>
     <!-- <i class='fa fa-linkedin'></i> -->
   </nav>
@@ -45,7 +45,7 @@
   </div>
 
 
-  <div class='projectsflex'>
+  <div id='projects' class='projectsflex'>
     <h1>My Projects</h1>
     <div class='projects'>
 
