--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
   <header>
 
     <!-- <div class='bg'></div> -->
-    <h1 class='name'>Sean <br> Khottavong</h1>
-    <h1 class='title'> <br><span class='dev'>web developer</span></h1>
+
     <img class='pic' src="Image 5.png" alt="">
 
-    <div class='bg'></div>
-    </div>
+    <div class='bg'>
+      <h1 class='name'>Sean <br> Khottavong</h1>
+      <h1 class='title'> <br><span class='dev'>web developer</span></h1></div>
   </header>
 
 
