--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 
   <header>
-    <h1 class='initials'>SK</h1>
-    <div class='initialsbox'>
-    </div>
+    <!-- <h1 class='initials'>SK</h1> -->
+    <h1 class='name'>Sean <br> Khottavong</h1>
+    <h1 class='title'> <br><span class='dev'>web developer</span></h1>
+
     <img class='pic' src="Image 5.png" alt="">
 
-    <!--
-    <h1 class='name'>Sean <br> Khottavong</h1>
-    <h1 class='title'> <br><span class='dev'>web developer</span></h1> -->
+
+
   </header>
 
 
