--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
 
     <div class='social'>
-      <a href=""><i class="fab fa-linkedin fa-2x"></i></a>
-      <a href=""><i class="fab fa-soundcloud fa-2x"></i></a>
-      <a href=""><i class="fab fa-github-square fa-2x"></i></a>
-      <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+      <a href="www.linkedin.com/in/khottavong"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-2x"></i></a>
+      <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-2x"></i></a>
+      <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-2x"></i></a>
     </div>
 
 
