--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
   <footer id='footer'>
     <div class='contactsection'>
       <h1>If you like what you see, <br> let's get in touch.</h1>
-      <a class='messageme' href="">Message Me</a>
-      <!-- <div class='form'>
+      <div id='contactbtn' class='messageme'>Message Me</div>
+      <div id='form' class='form hide'>
         <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
           <input type="text" name="firstname" placeholder="First Name" size="10" autofocus required>
           <input type="text" name="lastname" placeholder="Last Name" size="10" required>
@@ -79,7 +79,7 @@
           <textarea name="user_message"></textarea>
           <input id='contactsubmit' type="submit">
         </form>
-      </div> -->
+      </div>
     </div>
 
 
