--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class='item'>
-      <iframe height='100%' scrolling='no' title='gvLpXx' src='http://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
+      <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
 </iframe></div>
 
     <div class='item'>
