--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <a href="">Home</a>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
-    <a href="#footer">Contact</a>
+    <a href="#contact">Contact</a>
   </nav>
 
 
 
   <header>
     <!-- <h1 class='initials'>SK</h1> -->
+    <div class='red-box'></div>
     <h1 class='name'>Sean <br> Khottavong</h1>
     <h1 class='title'> <br><span class='dev'>web developer</span></h1>
 
@@ -57,20 +58,20 @@
       <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
 </iframe></div>
 
-    <div class='item'>
+    <!-- <div class='item'>
     </div>
 
     <div class='item'>
-      <a href="">My Blog</a>
+      <a href="">My Blog</a> -->
 
-    </div>
+  </div>
   </div>
 
 
 
-  <footer id='footer'>
+  <footer>
     <div class='contactsection'>
-      <h1>If you like what you see, <br> let's get in touch.</h1>
+      <h1 id='contact'>If you like what you see, <br> let's get in touch.</h1>
       <div id='contactbtn' class='messageme'>Message Me</div>
       <div id='form' class='form hide'>
         <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
