--- a/index.html
+++ b/index.html
@@ -41,59 +41,79 @@
 
 
 
-  <div id='about' class='about'>
-    <h1>About Me</h1>
-    <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local, well-known
-      company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
-    <div class='bg-box3'></div>
-  </div>
+  <section id='about'>
 
 
-  <div id='projects' class='projectsflex'>
-    <div class='item one'>
-      <a href="">Choose Your <br> Own Adventure</a>
+
+    <div class='about'>
+      <h1>About</h1>
+      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
+        well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+      <h2>My Skills</h2>
     </div>
+  </section>
 
-    <div class='item'>
-      <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
+
+  <section id='projects'>
+    <div class='section-title'>
+      <div class='filter'></div>
+      <h1>Projects</h1>
+    </div>
+    <div class='projectsflex'>
+      <div class='item one'>
+        <a href="">Choose Your <br> Own Adventure</a>
+      </div>
+
+      <div class='item'>
+        <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
 </iframe></div>
 
-    <!-- <div class='item'>
+      <div class='item'>
+      </div>
+
+      <div class='item'>
+        <a href="">My Blog</a>
+      </div>
     </div>
+  </section>
 
-    <div class='item'>
-      <a href="">My Blog</a> -->
 
-  </div>
-  </div>
 
+
+  <section class='contactsection'>
+    <div class='section-title'>
+      <div class='filter'></div>
+      <h1>Contact</h1>
+    </div>
+    <h1 id='contact'>If you like what you see, <br> let's get in touch.</h1>
+
+    <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
+      <div class='form-input'>
+        <input type="text" name="name" placeholder="Name" size="10" autofocus required>
+        <input type="email" name="userEmail" placeholder="Email" required>
+      </div>
+
+      <textarea class='form-text' name="user_message" placeholder="Message"></textarea>
+
+      <input id='contactsubmit' type="submit">
+    </form>
+
+  </section>
 
 
   <footer>
-    <div class='contactsection'>
-      <h1 id='contact'>If you like what you see, <br> let's get in touch.</h1>
-      <div id='contactbtn' class='messageme'>Message Me</div>
-      <div id='form' class='form hide'>
-        <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
-          <input type="text" name="firstname" placeholder="First Name" size="10" autofocus required>
-          <input type="text" name="lastname" placeholder="Last Name" size="10" required>
-          <input type="email" name="userEmail" placeholder="Email" required>
-          <textarea name="user_message"></textarea>
-          <input id='contactsubmit' type="submit">
-        </form>
-      </div>
-    </div>
-
-
     <div class='social'>
       <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-2x"></i></a>
       <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-2x"></i></a>
       <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-2x"></i></a>
     </div>
-
-
   </footer>
+
+
+
+
+
 
 
   <script src='script.js'></script>
