--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
   <div id='specialty' class='specialty'>
     <h2>My Skills</h2>
     <h4>HTML and CSS</h4>
-    <div id='skill1'>90%</div>
+    <div id='skill1' class='skill1'>90%</div>
     <h4>Javascript and Jquery</h4>
-    <div id='skill2'>60%</div>
+    <div id='skill2' class='skill2'>60%</div>
     <h4>Graphic Design</h4>
-    <div id='skill3'>50%</div>
+    <div id='skill3' class='skill3'>50%</div>
   </div>
 
 
@@ -94,7 +94,7 @@
 
     <div class='form-container'>
       <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
-        <div class='input'>
+        <div class='input-container'>
           <input type="text" name="name" placeholder="Name" autofocus required>
           <input type="email" name="userEmail" placeholder="Email" required>
         </div>
