--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <nav>
-    <a href="">Home</a>
+    <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
@@ -24,7 +24,7 @@
 
 
 
-  <header>
+  <header id='home'>
     <!-- <h1 class='initials'>SK</h1> -->
     <!-- <div class='red-box'></div> -->
     <div class='name-box'>
@@ -84,13 +84,13 @@
 
 
 
-  <div class='section-title'>
+  <div id='contact' class='section-title'>
     <div class='filter'></div>
     <h1>Contact</h1>
   </div>
   <section class='contact-section '>
 
-    <h1 id='contact '>If you like what you see, <br> let's get in touch.</h1>
+    <h1>If you like what you see, <br> let's get in touch.</h1>
 
     <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
       <div class='input-container'>
