--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <header id='home'>
     <!-- <h1 class='initials'>SK</h1> -->
-    <div class='red-box'></div>
+    <!-- <div class='red-box'></div> -->
     <div class='name-box'>
       <h1 class='name'>Sean <br> Khottavong</h1>
       <h1 class='title'> <br><span class='dev'>web developer</span></h1>
@@ -36,26 +36,26 @@
 
 
 
-  <div class='section-title'>
-    <div class='filter'></div>
-    <h1>About Me</h1>
-  </div>
-  <section id='about' class='about'>
-    <div class='aboutme'>
-      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
-        well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
-    </div>
 
-    <div id='specialty' class='specialty'>
-      <!-- <h2>My Skills</h2> -->
-      <h4>HTML and CSS</h4>
-      <div id='skill1' class='skill1'>90%</div>
-      <h4>Javascript and Jquery</h4>
-      <div id='skill2' class='skill2'>60%</div>
-      <h4>Graphic Design</h4>
-      <div id='skill3' class='skill3'>50%</div>
-    </div>
+  <section id='about'>
+    <h1>About me</h1>
+    <div class='about-container'>
+      <div class='aboutme'>
 
+        <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
+          well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+      </div>
+
+      <div id='specialty' class='specialty'>
+        <!-- <h2>My Skills</h2> -->
+        <h4>HTML and CSS</h4>
+        <div id='skill1' class='skill1'>90%</div>
+        <h4>Javascript and Jquery</h4>
+        <div id='skill2' class='skill2'>60%</div>
+        <h4>Graphic Design</h4>
+        <div id='skill3' class='skill3'>50%</div>
+      </div>
+    </div>
   </section>
 
 
