--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
   <section id='about'>
 
-    </div>
+
+
     <h1>About me</h1>
     <div class='about-container'>
       <div class='aboutme'>
@@ -64,7 +65,7 @@
 
   <section id='projects' class=projects-section>
     <div class='section-title'>
-      <div class='filter'></div>
+      <!-- <div class='filter'></div> -->
       <h1>Projects</h1>
     </div>
     <div class='projectsflex'>
@@ -89,7 +90,7 @@
 
 
   <div id='contact' class='section-title'>
-    <div class='filter'></div>
+    <!-- <div class='filter'></div> -->
     <h1>Contact</h1>
   </div>
   <section class='contact-section '>
