--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <div id='specialty' class='specialty'>
         <!-- <h2>My Skills</h2> -->
         <h4>HTML and CSS</h4>
-        <div id='skill1' class='skill1'>90%</div>
+        <div id='skill1'>90%</div>
         <h4>Javascript and Jquery</h4>
-        <div id='skill2' class='skill2'>60%</div>
+        <div id='skill2'>60%</div>
         <h4>Graphic Design</h4>
-        <div id='skill3' class='skill3'>50%</div>
+        <div id='skill3'>50%</div>
       </div>
     </div>
   </section>
@@ -125,7 +125,7 @@
 
 
 
-  <script src='script.js'></script>
+  <script src='script.js' type="text/javascript"></script>
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
 </body>
