--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
       <div class='input-container'>
-        <input type="text" name="name" placeholder="Name" autofocus required>
+        <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="userEmail" placeholder="Email" required>
       </div>
 
