--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
       <div id='specialty' class='specialty'>
         <!-- <h2>My Skills</h2> -->
-        <h4>HTML and CSS</h4>
+        <h4>HTML & CSS</h4>
         <div id='skill1'>90%</div>
-        <h4>Javascript and Jquery</h4>
+        <h4>Javascript & Jquery</h4>
         <div id='skill2'>60%</div>
         <h4>Graphic Design</h4>
         <div id='skill3'>50%</div>
