--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
   <header id='home'>
     <!-- <h1 class='initials'>SK</h1> -->
     <!-- <div class='red-box'></div> -->
-    <div class='name-box'>
-      <h1 class='name'>Sean <br> Khottavong</h1>
-      <h1 class='title'> <br><span class='dev'>web developer</span></h1>
+    <div class='gradient-box'>
+      <div class='name-box'>
+        <h1 class='name'>Sean <br> Khottavong</h1>
+        <h1 class='title'> <br><span class='dev'>web developer</span></h1>
+      </div>
     </div>
+
     <img class='pic' src="Image 5.png" alt="">
   </header>
 
