--- a/index.html
+++ b/index.html
@@ -68,23 +68,27 @@
   <section id='projects' class=projects-section>
     <!-- <div class='filter'></div> -->
 
-    </div>
+
     <div class='projectsflex'>
-      <div class='item one'>
-        <a href="">Choose Your <br> Own Adventure</a>
+      <div class='item'>
+        <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
+        </iframe>
       </div>
 
       <div class='item'>
-        <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
-</iframe></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, velit pariatur, nemo qui aperiam, assumenda consequatur sint fugit cupiditate cum itaque tempore quibusdam similique quasi vitae odit ullam. Praesentium doloremque, maiores
+          quidem dolores natus, dignissimos quas neque beatae odit id!</p>
+      </div>
+
+      <div class='item '>
+
+      </div>
 
       <div class='item'>
         <iframe height='100%' scrolling='no' src="http://hexads.netlify.com/" frameborder="0" allowtransparency='true' allowfullscreen='true' style='width: 100%;'></iframe>
       </div>
 
-      <div class='item '>
-        <a href="">My Blog</a>
-      </div>
+
     </div>
   </section>
 
