--- a/index.html
+++ b/index.html
@@ -25,23 +25,20 @@
 
 
   <header id='home'>
-    <div class='gradient-box'>
+    <!-- <div class='gradient-box'>
       <div class='name-box'>
         <h1 class='name'>Sean <br> Khottavong</h1>
         <h1 class='title'> <br><span class='dev'>web developer</span></h1>
       </div>
-    </div>
+    </div> -->
     <img class='pic' src="Image 5.png" alt="">
+    <div class='filter'></div>
   </header>
 
 
 
 
   <section id='about'>
-
-
-
-    <h1>About me</h1>
     <div class='about-container'>
       <div class='aboutme'>
 
@@ -58,9 +55,7 @@
         <h4>Graphic Design</h4>
         <div id='skill3'>50%</div>
       </div>
-
     </div>
-    <h1>Projects</h1>
   </section>
 
 
