--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
 
 
   <header id='home'>
-    <!-- <div class='gradient-box'>
-      <div class='name-box'>
-        <h1 class='name'>Sean <br> Khottavong</h1>
-        <h1 class='title'> <br><span class='dev'>web developer</span></h1>
-      </div>
-    </div> -->
     <img class='pic' src="Image 5.png" alt="">
     <div class='filter'></div>
   </header>
@@ -39,12 +33,12 @@
 
 
   <section id='about'>
+    <h1>About Me</h1>
     <div class='about-container'>
-      <div class='aboutme'>
 
-        <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
-          well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
-      </div>
+      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
+        well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+
 
       <div id='specialty' class='specialty'>
         <!-- <h2>My Skills</h2> -->
@@ -60,28 +54,18 @@
 
 
 
-  <section id='projects' class=projects-section>
-    <!-- <div class='filter'></div> -->
-
-
-    <div class='projectsflex'>
+  <section id='projects'>
+    <h1>My Projects</h1>
+    <div class='projects-container'>
       <div class='item'>
-        <iframe height='100%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
+        <iframe height='50%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
         </iframe>
       </div>
-
-      <div class='item'>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, velit pariatur, nemo qui aperiam, assumenda consequatur sint fugit cupiditate cum itaque tempore quibusdam similique quasi vitae odit ullam. Praesentium doloremque, maiores
-          quidem dolores natus, dignissimos quas neque beatae odit id!</p>
+      <div class='item-description'>
+        <h1>Pixel Art Maker</h1>
+        <p>This was a project in the Udacity Grow With Google Scholarship Program that utilizes javascript and jquery to build a grid based off of a user-specified size.</p>
       </div>
-
-      <div class='item '>
-
-      </div>
-
-      <div class='item'>
-        <iframe height='100%' scrolling='no' src="http://hexads.netlify.com/" frameborder="0" allowtransparency='true' allowfullscreen='true' style='width: 100%;'></iframe>
-      </div>
+    </div>
 
 
     </div>
@@ -89,24 +73,17 @@
 
 
 
-  <div id='contact' class='section-title'>
-    <!-- <div class='filter'></div> -->
-    <h1>Contact</h1>
-  </div>
-  <section class='contact-section '>
 
+  <section id='contact'>
     <h1>If you like what you see, <br> let's get in touch.</h1>
-
     <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
       <div class='input-container'>
         <input type="text" name="name" placeholder="Name" required>
         <input type="email" name="userEmail" placeholder="Email" required>
       </div>
-
       <textarea class='form-text' name="user_message" placeholder="Message"></textarea>
       <input id='contactsubmit' type="submit">
     </form>
-
   </section>
 
 
