--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+  <div class="burger">
+    <div class="bar1"></div>
+    <div class="bar2"></div>
+    <div class="bar3"></div>
+  </div>
 
   <nav>
     <a href="#home">Home</a>
@@ -33,7 +38,7 @@
 
 
   <section id='about'>
-    <h1>About Me</h1>
+    <h1 class='content-header'>About Me</h1>
     <div class='about-container'>
 
       <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
@@ -55,7 +60,7 @@
 
 
   <section id='projects'>
-    <h1>My Projects</h1>
+    <h1 class='content-header'>My Projects</h1>
     <div class='projects-container'>
       <div class='item'>
         <iframe height='50%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
@@ -75,6 +80,7 @@
 
 
   <section id='contact'>
+    <h1 class='content-header'>Contact</h1>
     <h1>If you like what you see, <br> let's get in touch.</h1>
     <form action="https://formspree.io/sean.khottavong@gmail.com" method="POST">
       <div class='input-container'>
