--- a/index.html
+++ b/index.html
@@ -63,16 +63,24 @@
     <h1 class='content-header'>My Projects</h1>
     <div class='projects-container'>
       <div class='item'>
-        <iframe height='50%' scrolling='no' title='gvLpXx' src='https://codepen.io/Khottavong/embed/gvLpXx/?height=281&theme-id=light&default-tab=result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='https://codepen.io/Khottavong/pen/gvLpXx/'>gvLpXx</a> by Sean Khottavong (<a href='https://codepen.io/Khottavong'>@Khottavong</a>) on <a href='https://codepen.io'>CodePen</a>.
-        </iframe>
+        <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pxl-art.png" alt="pixel art image">
+      </div></a>
+        <div class='item-description'>
+          <h1>Pixel Art Maker</h1>
+          <p>This was a project in the Udacity Grow With Google Scholarship Program that utilizes javascript and jquery to build a grid based off of a user-specified size.</p>
+        </div>
       </div>
-      <div class='item-description'>
-        <h1>Pixel Art Maker</h1>
-        <p>This was a project in the Udacity Grow With Google Scholarship Program that utilizes javascript and jquery to build a grid based off of a user-specified size.</p>
+
+      <div class='projects-container'>
+        <div class='item-description'>
+          <h1>Hexa Design Studios</h1>
+          <p>This is a site that I'm building with a friend.</p>
+        </div>
+        <div class='item'>
+          <a href="https://hexads.netlify.com"><img class='hexa-site2.png' src="hexa-site.png" alt="hexa site image"></a>
+        </div>
+
       </div>
-    </div>
-
-
     </div>
   </section>
 
