--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
 
 
   <header id='home'>
-    <img class='pic' src="Image 5.png" alt="">
+    <div class='name-box'>
+      <h1>Sean Khottavong</h1>
+      <h2>Web Developer</h2></div>
+
+    <img class='pic' src="Image 5 Copy.png" alt="">
     <div class='filter'></div>
   </header>
 
@@ -74,10 +78,10 @@
       <div class='projects-container'>
         <div class='item-description'>
           <h1>Hexa Design Studios</h1>
-          <p>This is a site that I'm building with a friend.</p>
+          <p>This is a site that I'm helping build for a friend's design startup.</p>
         </div>
         <div class='item'>
-          <a href="https://hexads.netlify.com"><img class='hexa-site2.png' src="hexa-site.png" alt="hexa site image"></a>
+          <a href="https://hexads.netlify.com"><img class='hexa-site.jpg' src="hexa-site.png" alt="hexa site image"></a>
         </div>
 
       </div>
