--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <h1 class='content-header'>About Me</h1>
     <div class='about-container'>
 
-      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music, art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration technician at a local,
-        well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
+      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music (SoundCloud link below), art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration
+        technician at a local, well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
 
 
       <div id='specialty' class='specialty'>
