--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <h1 class='content-header'>About Me</h1>
     <div class='about-container'>
 
-      <p>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music (SoundCloud link below), art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration
+      <p class=' animation-element slide-left'>Hi, I'm Sean, an aspiring web-developer in the Chattanooga area. I'm a lover of music (SoundCloud link below), art, and the outdoors and I like to employ elements and concepts of these interests into my work. Currently, I work as a refrigeration
         technician at a local, well-known company, but I spend my free time learning more about web development, 3D printing, producing music, hiking, and whitewater kayaking. I have the heart of a creator and the mind of a technician.</p>
 
 
@@ -67,10 +67,10 @@
   <section id='projects'>
     <h1 class='content-header'>My Projects</h1>
     <div class='projects-container'>
-      <div class='item'>
+      <div class='item animation-element'>
         <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pxl-art.png" alt="pixel art image">
       </div></a>
-        <div class='item-description'>
+        <div class='item-description animation-element slide-left'>
           <h1>Pixel Art Maker</h1>
           <p>This was a project in the Udacity Grow With Google Scholarship Program that utilizes javascript and jquery to build a grid based off of a user-specified size.</p>
         </div>
