--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <section id='projects'>
     <h1 class='content-header'>My Projects</h1>
     <div class='projects-container'>
-      <div class='item animation-element'>
+      <div class='item animation-element slide-left'>
         <a href="https://codepen.io/Khottavong/pen/gvLpXx?editors=1111"><img class='pxl-art-img' src="pxl-art.png" alt="pixel art image">
       </div></a>
         <div class='item-description animation-element slide-left'>
@@ -77,11 +77,11 @@
       </div>
 
       <div class='projects-container'>
-        <div class='item-description'>
+        <div class='item-description animation-element slide-right'>
           <h1>Hexa Design Studios</h1>
           <p>This is a site that I'm helping build for a friend's design startup.</p>
         </div>
-        <div class='item'>
+        <div class='item animation-element slide-right'>
           <a href="https://hexads.netlify.com"><img class='hexa-site.jpg' src="hexa-site.png" alt="hexa site image"></a>
         </div>
 
