--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
       <div id='specialty' class='specialty'>
         <!-- <h2>My Skills</h2> -->
         <h4>HTML & CSS</h4>
-        <div id='skill1' class='animation-element'>90%</div>
+        <div class='skill1 animation-element load'>90%</div>
         <h4>Javascript & Jquery</h4>
-        <div id='skill2' class='animation-element'>60%</div>
+        <div class='skill2 animation-element load'>60%</div>
         <h4>Graphic Design</h4>
-        <div id='skill3' class='animation-element'>50%</div>
+        <div class=' skill3 animation-element load'>50%</div>
       </div>
     </div>
   </section>
