--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
   <footer>
     <div class='social'>
+      <a href="https://codepen.io/Khottavong/"><i class="fab fa-codepen fa-2x"></i></a>
       <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-2x"></i></a>
       <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-2x"></i></a>
       <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-2x"></i></a>
