--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <div class='name-box'>
       <h1>Sean Khottavong</h1>
       <h2>Web Developer</h2></div>
+    <a href="">
+      <div class='download-resume'>Download Resume</div>
+    </a>
 
     <img class='pic' src="Image 5 Copy.png" alt="">
     <div class='filter'></div>
