--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <!-- <a href="">
       <div class='download-resume'>Download Resume</div>
     </a> -->
+    <div class='vid-container'>
+      <video src="tablesaw.mp4" autoplay loop>
+        
+      </video> </div>
 
     <img class='pic' src="Image 5 Copy.png" alt="">
     <div class='filter'></div>
@@ -111,11 +115,11 @@
 
   <footer>
     <div class='social'>
-      <a href="https://codepen.io/Khottavong/"><i class="fab fa-codepen fa-2x"></i></a>
-      <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-2x"></i></a>
-      <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-2x"></i></a>
-      <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-2x"></i></a>
-      <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-2x"></i></a>
+      <a href="https://codepen.io/Khottavong/"><i class="fab fa-codepen fa-1x"></i></a>
+      <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-1x"></i></a>
+      <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-1x"></i></a>
+      <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-1x"></i></a>
+      <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-1x"></i></a>
     </div>
   </footer>
 
