--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
     <!-- <a href="">
       <div class='download-resume'>Download Resume</div>
     </a> -->
-    <div class='vid-container'>
-      <video src="tablesaw.mp4" autoplay loop>
-        
-      </video> </div>
+    <!-- <div class='vid-container'>
+      <video src="tablesaw.mp4" autoplay loop> -->
+
+    </video>
+    </div>
 
     <img class='pic' src="Image 5 Copy.png" alt="">
     <div class='filter'></div>
