--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <!-- <a href="">
       <div class='download-resume'>Download Resume</div>
     </a> -->
-    <!-- <div class='vid-container'>
-      <video src="tablesaw.mp4" autoplay loop> -->
+    <div class='vid-container'>
+      <video src="ocoee.mp4" autoplay loop>
 
     </video>
     </div>
