--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class='download-resume'>Download Resume</div>
     </a> -->
     <div class='vid-container'>
-      <video src="ocoee.mp4" autoplay loop>
+      <video src="ocoee.mp4" autoplay loop muted>
 
     </video>
     </div>
