--- a/index.html
+++ b/index.html
@@ -116,18 +116,29 @@
 
   <footer>
     <div class='social'>
-      <a href="https://codepen.io/Khottavong/"><i class="fab fa-codepen fa-1x"></i></a>
-      <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-1x"></i></a>
-      <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-1x"></i></a>
-      <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-1x"></i></a>
-      <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-1x"></i></a>
+      <a href="https://codepen.io/Khottavong/"><i class="fab fa-codepen fa-2x"></i></a>
+      <a href="https://www.linkedin.com/in/khottavong/"><i class="fab fa-linkedin fa-2x"></i></a>
+      <a href="https://soundcloud.com/sean-khottavong"><i class="fab fa-soundcloud fa-2x"></i></a>
+      <a href="https://github.com/khottavong"><i class="fab fa-github-square fa-2x"></i></a>
+      <a href="https://twitter.com/Sean_Khottavong"><i class="fab fa-twitter fa-2x"></i></a>
     </div>
   </footer>
 
 
 
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119275119-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-119275119-1');
+  </script>
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src='script.js' type="text/javascript"></script>
